--- a/iHome/static/html/profile.html
+++ b/iHome/static/html/profile.html
@@ -56,7 +56,7 @@
                 <p>保存成功！</p>
             </div>
             
-            <div class="mask"></div>
+            <div class="mask"></div>\
         </div>
         <div class="footer">
             <p><span><i class="fa fa-copyright"></i></span>爱家租房&nbsp;&nbsp;享受家的温馨</p>
